Main section of the website is almost completetd from left side all the imp links and images are added to it.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,29 @@
 
 
     <div class="container">
-        <div class="left"></div>
+        <div class="left">
+
+<div class="imp-links">
+    <a href="#"><img src="images/news.png">Latest around you</a>
+    <a href="#"><img src="images/friends.png">Friends</a>
+    <a href="#"><img src="images/group.png">Groups</a>
+    <a href="#"><img src="images/marketplace.png">Market</a>
+    <a href="#"><img src="images/watch.png">Watch more</a>
+    <a href="#" id="last">See more</a>
+</div>
+
+<div class="other">
+    <ul>
+        <li><a href="https://google.com">Google</a></li>
+        <li><a href="https://x.com/home?lang=en">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/home?originalSubdomain=in">Linkedin</a></li>
+        <li><a href="https://github.com/">Github</a></li>
+        <li><a href="#">Others</a></li>
+    </ul>
+</div>
+
+
+        </div>
         <div class="mid"></div>
         <div class="right"></div>
     </div>
